--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "eslint-plugin-prettier": "^3.1.2",
     "express": "^4.17.1",
     "helmet": "^3.21.3",
+    "lodash": "^4.17.15",
     "node": "^13.10.1",
     "nodejs": "^0.0.0",
     "pg": "^7.18.2",
@@ -30,6 +31,7 @@
   "devDependencies": {
     "@types/express": "^4.17.3",
     "@types/helmet": "^0.0.45",
+    "@types/lodash": "^4.14.149",
     "@types/node": "^13.9.2",
     "rimraf": "^3.0.2"
   }
