--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
   "author": "Bart",
   "license": "ISC",
   "dependencies": {
+    "@types/bcrypt": "^3.0.0",
+    "@types/jsonwebtoken": "^8.3.8",
+    "@types/redis": "^2.8.16",
     "@typescript-eslint/eslint-plugin": "^2.24.0",
     "@typescript-eslint/parser": "^2.24.0",
     "body-parser": "^1.19.0",
@@ -19,11 +22,14 @@
     "eslint-plugin-prettier": "^3.1.2",
     "express": "^4.17.1",
     "helmet": "^3.21.3",
+    "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.15",
     "node": "^13.10.1",
     "nodejs": "^0.0.0",
     "pg": "^7.18.2",
     "prettier": "^1.19.1",
+    "rand-token": "^1.0.1",
+    "redis": "^3.0.2",
     "reflect-metadata": "^0.1.13",
     "typeorm": "^0.2.24",
     "typescript": "^3.8.3"
