--- a/package.json
+++ b/package.json
@@ -10,18 +10,23 @@
   "license": "ISC",
   "dependencies": {
     "@types/bcrypt": "^3.0.0",
+    "@types/dompurify": "^2.0.1",
+    "@types/jsdom": "^16.1.1",
     "@types/jsonwebtoken": "^8.3.8",
     "@types/redis": "^2.8.16",
+    "@types/validator": "^12.0.1",
     "@typescript-eslint/eslint-plugin": "^2.24.0",
     "@typescript-eslint/parser": "^2.24.0",
     "body-parser": "^1.19.0",
     "concurrently": "^5.1.0",
+    "dompurify": "^2.0.8",
     "dotenv": "^8.2.0",
     "eslint": "^6.8.0",
     "eslint-config-prettier": "^6.10.0",
     "eslint-plugin-prettier": "^3.1.2",
     "express": "^4.17.1",
     "helmet": "^3.21.3",
+    "jsdom": "^16.2.1",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.15",
     "node": "^13.10.1",
@@ -32,7 +37,8 @@
     "redis": "^3.0.2",
     "reflect-metadata": "^0.1.13",
     "typeorm": "^0.2.24",
-    "typescript": "^3.8.3"
+    "typescript": "^3.8.3",
+    "validator": "^13.0.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.3",
