Prepare to start server

--- a/package.json
+++ b/package.json
@@ -4,31 +4,42 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node build/index.js",
+    "start:dev": "NODE_PATH=./src ts-node ./src/index.ts",
+    "build": "rimraf build && tsc"
   },
   "author": "Bart",
   "license": "ISC",
   "dependencies": {
     "@types/bcrypt": "^3.0.0",
+    "@types/body-parser": "^1.19.0",
+    "@types/compression": "^1.7.0",
+    "@types/cors": "^2.8.6",
     "@types/dompurify": "^2.0.1",
     "@types/jsdom": "^16.1.1",
     "@types/jsonwebtoken": "^8.3.8",
+    "@types/morgan": "^1.9.0",
     "@types/redis": "^2.8.16",
+    "@types/uuid": "^7.0.2",
     "@types/validator": "^12.0.1",
     "@typescript-eslint/eslint-plugin": "^2.24.0",
     "@typescript-eslint/parser": "^2.24.0",
+    "bcrypt": "^4.0.1",
     "body-parser": "^1.19.0",
+    "compression": "^1.7.4",
     "concurrently": "^5.1.0",
+    "cors": "^2.8.5",
     "dompurify": "^2.0.8",
     "dotenv": "^8.2.0",
     "eslint": "^6.8.0",
     "eslint-config-prettier": "^6.10.0",
     "eslint-plugin-prettier": "^3.1.2",
     "express": "^4.17.1",
-    "helmet": "^3.21.3",
+    "helmet": "^3.22.0",
     "jsdom": "^16.2.1",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.15",
+    "morgan": "^1.10.0",
     "node": "^13.10.1",
     "nodejs": "^0.0.0",
     "pg": "^7.18.2",
@@ -36,6 +47,7 @@
     "rand-token": "^1.0.1",
     "redis": "^3.0.2",
     "reflect-metadata": "^0.1.13",
+    "ts-node": "^8.8.1",
     "typeorm": "^0.2.24",
     "typescript": "^3.8.3",
     "validator": "^13.0.0"
